sign up form id

--- a/views/page/home.ejs
+++ b/views/page/home.ejs
@@ -16,7 +16,7 @@
 	<h1>TRACK YOUR PROGRESS</h1>
 	<p>PowerUp is a personal analytics tool that helps you turn your projects and goals into stories.</p>
 	
-	<form action="/sign_up" method="post">
+	<form id="sign_up_form" action="/sign_up" method="post">
     <div class="field">
 			<label>EMAIL</label>
       <input type="email" class="email" name="user[email]" />
