--- a/views/user/join.ejs
+++ b/views/user/join.ejs
@@ -2,7 +2,7 @@
 
 <link href="/css/join.css" rel="stylesheet" type="text/css" />
 
-<h1>UPGRADE FOR MORE GRIDS</h1>
+<h1>Premium users accomplish 7x more!</h1>
 <h2>Get unlimited grids &amp; extras for $5/month</h2>
 
 <% include ../partials/payment_form.ejs %>
@@ -13,7 +13,7 @@
 	<h2>The Large Print</h2>
 	<li>PowerUp pros get unlimited grids</li>
 	<li>Switch back to free anytime</li>
-	<li>Access to premium features (coming soon)</li>
+	<li>Access to premium features</li>
 	<li>Support our small team so we can continue to improve PowerUp.</li>
 </ul>
 
