landing page messaging

--- a/views/page/band-signup.ejs
+++ b/views/page/band-signup.ejs
@@ -3,11 +3,18 @@
 	body {
 		background-image:url('/img/photos/band.jpg');
 	}
+	a {
+		color:#aaa;
+		text-decoration:underline;
+	}
+	#sidebar p {
+		font-size:20px;
+	}
 </style>
 
 <div id="sidebar">
 	<h1>PRACTICE MAKES LEGENDS</h1>
-	<p>PowerUp can help you stay on track while you focus on doing what you do best. Rocking out.</p>
+	<p>PowerUp is a tool to help you track your band's activity to get more out of practices. <a href="/getting-started">Find out more.</a></p>
 	
 	<% include ../partials/grid_landing_page.ejs %>
 </div>
