--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<% if(typeof(title) === 'undefined'){ %>
-		<% title = 'Achieve your goals with PowerUp' %>
+		<% title = 'PowerUp - Personal analytics tool to help track your goals.' %>
 	<% } %>
 	<title><%= title %></title>
 	<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
