--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,6 +3,10 @@
 	<div id="nav">
 		<a class="right" target="_blank" href="http://twitter.com/powerupio">Twitter</a>
 		<a class="right" target="_blank" href="http://blog.powerup.io">Blog</a>
+		<div style="float:right;padding-top:10px">
+			<iframe style="border: 0; margin: 0; padding: 0;" src="https://www.gittip.com/powerupio/widget.html" width="48pt" height="22pt"></iframe>
+		</div>
+		
 		<a href="/getting-started">Getting Started</a>
 		<a href="/tos">TOS</a>
 		<a href="/contact">Contact</a>
