--- a/views/auth/sign_in.ejs
+++ b/views/auth/sign_in.ejs
@@ -1,7 +1,9 @@
 <% include ../partials/head.ejs %>
 
-<h1>SIGN IN</h1>
-<div class="sign-in">
+<div class="side"></div>
+
+<div class="sign-in content">
+	<h1>SIGN IN</h1>
   <form action="/sign_in" method="post">
     <div class="field">
 			<label>EMAIL</label>
