--- a/views/auth/sign_up.ejs
+++ b/views/auth/sign_up.ejs
@@ -1,7 +1,9 @@
 <% include ../partials/head.ejs %>
 
-<h1>SIGN UP</h1>
-<div class="sign-up">
+<div class="side"></div>
+
+<div class="sign-up content">
+	<h1>SIGN UP</h1>
   <form action="/sign_up" method="post">
     <div class="field">
 			<label>EMAIL</label>
