--- a/views/page/contact.ejs
+++ b/views/page/contact.ejs
@@ -1,5 +1,7 @@
 <% include ../partials/head.ejs %>
 
+<div class="side"></div>
+
 <h1>Contact</h1>
 <div class="content">
 	<p>No matter if you're here to track your workouts or finish a project that has been sitting on the back burner for the last year, we want to help you reach your goals.</p>
