--- a/views/page/fiften.ejs
+++ b/views/page/fiften.ejs
@@ -9,6 +9,12 @@
 	}
 </style>
 
+<div class="side">
+	<div>
+		<img width="310" src="https://lh5.googleusercontent.com/rrYJGwR53mgeqJyVneigpFI43qCSROdmkkqlKzTo4tnU0p6y4l_KRP3BuZO0Bdc718_sw0JWrpw=s640-h400-e365-rw" />
+	</div>
+</div>
+
 <h1>FIFTEN</h1>
 <div class="content">
 	<p>FIFTEN is a simple game available in the Google Web Store designed to help you improve your concentration, scanning ability and overall mental fortitude.</p>
