--- a/views/user/join.ejs
+++ b/views/user/join.ejs
@@ -1,20 +1,25 @@
 <% include ../partials/head.ejs %>
 
+<div class="side">
+	<div>
+		<ul>
+			<h2>The Large Print</h2>
+			<li>PowerUp pros get unlimited grids</li>
+			<li>Switch back to free anytime</li>
+			<li>Access to premium features</li>
+			<li>Support our small team so we can continue to improve PowerUp.</li>
+		</ul>
+	</div>
+</div>
+
 <link href="/css/join.css" rel="stylesheet" type="text/css" />
 
-<h1>Premium users accomplish 7x more!</h1>
-<h2>Get unlimited grids &amp; extras for $5/month</h2>
+<div class="content">
+	<h1>Premium users accomplish 7x more!</h1>
+	<h2>Get unlimited grids &amp; extras for $5/month</h2>
 
-<% include ../partials/payment_form.ejs %>
+	<% include ../partials/payment_form.ejs %>
+</div>
 
-<div class="divider"></div>
-
-<ul>
-	<h2>The Large Print</h2>
-	<li>PowerUp pros get unlimited grids</li>
-	<li>Switch back to free anytime</li>
-	<li>Access to premium features</li>
-	<li>Support our small team so we can continue to improve PowerUp.</li>
-</ul>
 
 <% include ../partials/footer.ejs %>
