--- a/views/user/password.ejs
+++ b/views/user/password.ejs
@@ -1,23 +1,27 @@
 <% include ../partials/head.ejs %>
 
-<form action="/change_password" method="post" id="password_form">
+<div class="side"></div>
 
-	<h1>CHANGE PASSWORD</h1>
-  <div class="field">
-		<label>NEW PASS</label>
-    <input type="password" name="user[password]" id="pass_1" />
-  </div>
+<div class="content">
+	<form action="/change_password" method="post" id="password_form">
 
-	<div class="field">
-		<label>REPEAT</label>
-    <input type="password" name="" id="pass_2" />
-  </div>
+		<h1>CHANGE PASSWORD</h1>
+	  <div class="field">
+			<label>NEW PASS</label>
+	    <input type="password" name="user[password]" id="pass_1" />
+	  </div>
+
+		<div class="field">
+			<label>REPEAT</label>
+	    <input type="password" name="" id="pass_2" />
+	  </div>
   
-	<ul class="right links">
-		<li><a href="/settings">Settings</a></li>
-		<li><a href="/sign_out">Sign out</a></li>
-	</ul>
-	<button type="submit" class="submit">Submit</button>
-</form>
+		<ul class="right links">
+			<li><a href="/settings">Settings</a></li>
+			<li><a href="/sign_out">Sign out</a></li>
+		</ul>
+		<button type="submit" class="submit">Submit</button>
+	</form>
+</div>
 
 <% include ../partials/footer.ejs %>
