--- a/views/user/settings.ejs
+++ b/views/user/settings.ejs
@@ -1,5 +1,9 @@
 <% include ../partials/head.ejs %>
 
-<% include ../partials/settings_form.ejs %>
+<div class="side"></div>
+
+<div class="content">
+	<% include ../partials/settings_form.ejs %>
+</div>
 
 <% include ../partials/footer.ejs %>
