--- a/public/css/settings.css
+++ b/public/css/settings.css
@@ -19,7 +19,7 @@
 .field input {
   float:left;
   border:none;
-  background:#fff;
+  background:rgba(0,0,0,.02);
   width:588px;
   height:40px;
   margin:0;
