--- a/views/page/pricing.ejs
+++ b/views/page/pricing.ejs
@@ -1,11 +1,12 @@
 <% include ../partials/head.ejs %>
 
+<div class="side"></div>
+
 <h1>Pricing</h1>
 <div class="content">
 	<p>PowerUp is <strong>free</strong> for people who only need to track 1 grid at a time. Create an unlimited number of grids as long as you've either completed or deleted all of your current grids.</p>
 	<p>If you need to track multiple grids at once, <a href="/join">upgrade for $5/month</a> for unlimited usage.</p>
-	<p>Premium users accomplish <strong>7x more</strong>! Rocky would give it 2 broken thumbs up if he weren't a work of fiction.</p>
-	<iframe width="560" height="315" src="//www.youtube.com/embed/DP3MFBzMH2o" frameborder="0" allowfullscreen></iframe>
+	<p>Premium users accomplish <strong>7x more</strong>!</p>
 </div>
 
 <% include ../partials/footer.ejs %>
