--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -12,7 +12,7 @@
 	<meta name="google-site-verification" content="QJ-ldZtwOYjEzAXSHRLQKb40HuYRrzpa3HjlZ-pF8YU" />
 	<% if(typeof(stylesheets) !== 'undefined'){ %>
 		<% for(stylesheet in stylesheets){ %>
-			<link rel="stylesheet" type="text/css" href="/css/<%= stylesheets[stylesheet] %>.css" />
+			<link rel="stylesheet" type="text/css" href="/css/<%= stylesheets[stylesheet] %>.css?v=1" />
 		<% } %>
 	<% } %>
 	
