--- a/views/grid/edit.ejs
+++ b/views/grid/edit.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/head.ejs %>
 
-<div id="grid_form">
+<div id="grid_form" class="content">
 	<h1>EDIT GRID</h1>
 	<form action="/grids/<%= grid.slug %>" method="post" id="new_grid">
 	  <div class="field">
