--- a/views/user/settings.ejs
+++ b/views/user/settings.ejs
@@ -1,6 +1,8 @@
 <% include ../partials/head.ejs %>
 
-<div class="side"></div>
+<div class="side">
+	<% include ../partials/news.ejs %>
+</div>
 
 <div class="content">
 	<% include ../partials/settings_form.ejs %>
