--- a/public/css/page.css
+++ b/public/css/page.css
@@ -42,6 +42,21 @@ body {
   border-left:1px dashed rgba(0,0,0,.1);
 }
 
+#page .side ul.tips {
+  padding-left: 25px;
+}
+
+#page .side ul.tips h2 {
+  padding-bottom:10px;
+}
+
+#page .side ul.tips li {
+  font-size: 18px;
+  list-style: square;
+  padding-bottom: 10px;
+  line-height: 1.1;
+}
+
 #page .side div {
   padding:20px;
 }
