--- a/views/page/pricing.ejs
+++ b/views/page/pricing.ejs
@@ -1,6 +1,8 @@
 <% include ../partials/head.ejs %>
 
-<div class="side"></div>
+<div class="side">
+	<% include ../partials/news.ejs %>
+</div>
 
 <h1>Pricing</h1>
 <div class="content">
