--- a/views/user/password.ejs
+++ b/views/user/password.ejs
@@ -1,6 +1,8 @@
 <% include ../partials/head.ejs %>
 
-<div class="side"></div>
+<div class="side">
+	<% include ../partials/news.ejs %>
+</div>
 
 <div class="content">
 	<form action="/change_password" method="post" id="password_form">
