--- a/views/page/band-names.ejs
+++ b/views/page/band-names.ejs
@@ -220,7 +220,7 @@
 	
 	<div class="get_started">
 		<p>Be Legendary</p>
-		<a href="/band_signup">START PRACTICING</a>
+		<a href="/band_signup">START A BAND</a>
 	</div>
 </div>
 
