--- a/views/page/become-a-writer.ejs
+++ b/views/page/become-a-writer.ejs
@@ -16,7 +16,7 @@
 	<ul class="slideshow">
 		<li class="active">
 			<h1>BECOME A WRITER, DAY BY DAY</h1>
-			<p>PowerUp will help you stay on track, honing your writing skills step-by-step.</p>
+			<p>PowerUp will help hone your writing skills, showing your progress step-by-step.</p>
 		</li>
 		<li>
 			<h2>BE MORE PERSISTENT</h2>
