--- a/views/page/band-names.ejs
+++ b/views/page/band-names.ejs
@@ -75,7 +75,7 @@
 	
 	#band_frame {
 		padding-top:40px;
-		padding-bottom:125px;
+		padding-bottom:140px;
 		text-align:center;
 		background:rgba(0,0,0,.1);
 		position:relative;
@@ -92,10 +92,11 @@
 	.get_started {
 		position:absolute;
 		bottom:0;
-		height:90px;
+		height:100px;
 		text-align:center;
 		width:100%;
 		padding-top:15px;
+		padding-bottom:15px;
 		border-top:1px dashed #888;
 	}
 	
@@ -219,8 +220,21 @@
 	<h1 id="band_name"></h1>
 	
 	<div class="get_started">
+	  <script type="text/javascript"><!--
+		google_ad_client = "ca-pub-5660321532335218";
+		/* Powerup - Band Name Generator */
+		google_ad_slot = "3847151873";
+		google_ad_width = 728;
+		google_ad_height = 90;
+		//-->
+		</script>
+		<script type="text/javascript"
+		src="//pagead2.googlesyndication.com/pagead/show_ads.js">
+		</script>
+		<!--
 		<p>Be Legendary</p>
 		<a href="/band_signup">START A BAND</a>
+		-->
 	</div>
 </div>
 
