--- a/views/track/timeline.ejs
+++ b/views/track/timeline.ejs
@@ -2,4 +2,14 @@
 
 <h1>TIMELINE</h1>
 
+<div id="dates">
+
+</div>
+
+<div id="timelines">
+	<ul>
+		<li></li>
+	</ul>
+</div>
+
 <% include ../partials/footer.ejs %>
