--- a/views/page/band-names.ejs
+++ b/views/page/band-names.ejs
@@ -95,8 +95,8 @@
 		height:100px;
 		text-align:center;
 		width:100%;
-		padding-top:15px;
-		padding-bottom:15px;
+		padding-top:10px;
+		padding-bottom:0;
 		border-top:1px dashed #888;
 	}
 	
