Update links to meet Stripe's SSL req

--- a/views/page/pricing.ejs
+++ b/views/page/pricing.ejs
@@ -7,7 +7,7 @@
 <h1>Pricing</h1>
 <div class="content">
 	<p>PowerUp is <strong>free</strong> for people who only need to track 1 grid at a time. Create an unlimited number of grids as long as you've either completed or deleted all of your current grids.</p>
-	<p>If you need to track multiple grids at once, <a href="/join">upgrade for $5/month</a> for unlimited usage.</p>
+	<p>If you need to track multiple grids at once, <a href="https://powerupio.herokuapp.com/join">upgrade for $5/month</a> for unlimited usage.</p>
 	<p>Premium users accomplish <strong>7x more</strong>!</p>
 </div>
 
